parsing wordnet rdf n-triples, refactoring